# SDKBench

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  results-analysis.md
data/: patterns.md
data/clerk/: mined-repos.json  patterns.json  repositories.json
data/lancedb/: mined-repos.json  patterns.json  patterns.md  real-world-patterns.md  repositories.json
docs/: f-corr-implementation-plan.md  ingredients-vs-tasks.md  multi-sdk-guide.md  plan.md  progress-summary.md  repository-structure.md  revised-metrics.md  sdkbench-vs-logbench-metrics-comparison.md
docs/0-lb-docs/: logbench-full-summary.md
docs/1-poc/: clerk-poc-plan.md  poc-implementation-status.md  week3-implementation-summary.md  week3-infrastructure-plan.md  week4-llm-integration-plan.md
docs/3-metrics-deep-dive/: 0-I-ACC_Deep_Dive.md  4-CQ_Deep_Dive.md  (+1 more)
lb-docs/: logbench-summary.md
notebooks/: C-COMP_Deep_Dive.md  IPA_Deep_Dive.md  README.md  sdkbench_step_by_step_evaluation.ipynb
results/: model_comparison.md  sdk_comparison_20251124_174820.md
scripts/: README.md  SCRIPT_DIFFERENCES.md  __init__.py  build_samples.py  compare_sdk_results.py  evaluate.py  evaluate_existing.py  extract_patterns.py  llm_evaluate.py  mine_repos.py  run.py  run_all_samples.py  run_evaluation_clean.py  run_evaluation_correct.py  run_evaluation_multi_sdk.py  run_fcorr.py  run_lancedb_evaluation.py  run_pipeline.py  search_repos.py  test_core.py  test_lancedb_samples.py  test_llm.py  test_metrics.py  test_multi_sdk.py
sdkbench/: __init__.py
tests/: __init__.py  conftest.py
(+1341 files in other folders)
