[project]
name = "sdkbench"
version = "0.1.0"
description = "SDK-Bench: A benchmark for evaluating LLM SDK instrumentation capabilities"
authors = [
    {name = "SDK-Bench Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pygithub>=2.1.1",
    "gitpython>=3.1.40",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.20.0",
    "openai>=1.12.0",
    "tree-sitter>=0.20.4",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "tqdm>=4.66.1",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
]

[project.scripts]
search-repos = "scripts.search_repos:main"
mine-repos = "scripts.mine_repos:main"
extract-patterns = "scripts.extract_patterns:main"
build-samples = "scripts.build_samples:main"
evaluate = "scripts.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdkbench", "scripts"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
